Before CMF 1.6 beta

  Bug Fixes

    - Removed BBBTransaction class from CMFCore.utils

  Features

    - Replaced Z2 interfaces w/ Z3 interfaces, dynamically creating Z2
      interfaces via bridge

    - Back-ported the GenericSetup style of site creation from CMF trunk

  Others

    - Converted CMFSetup into a pure legacy package. CMFSetup will be removed
      in CMF 2.0.

    - Reordered base classes of File and Image, to allow use of super().

    - Made unit tests close the request properly.

    - Changed TypesTool.manage_addTypeInformation method to log a warning
      instead of raise an exception if the typeinfo_name is not found.